--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "babel-jest": "^27.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-emoji": "^1.5.0",
     "react-headroom": "^3.1.1",
+    "react-lottie": "^1.2.3",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
